# mpi-graph-framework

./: .gitignore
alg-list/: Makefile  alg-survey.bib  alg-survey.tex  mac-includes.tex
algorithms/: bfs.py  cc.py  paths.py  spt.py  testing.py  traversal.py
framework/: .gitignore  CMakeLists.txt  build.sh  generate_graph.py  itTest.sh  itTestAndSplitLogs.sh  log_processor.py  log_splitter.py  main.c  main.cpp  run.sh  splitOutputs.sh  sync_with_superc.sh
framework/resources/main/: complete50.adjl  simple4vertex.adjl
framework/resources/test/: ReaderTest.csv  ReaderTestNegatives.csv  STG.bspsol  STG_incorrect.bspsol  SimpleTestGraph.el  complete50.adjl  gids  powerlaw_25_2_05_876.adjl  test.bfssol
framework/src/: Algorithm.h  Graph.cpp  Graph.h  GraphBuilder.h  GraphPartition.h  main.cpp
framework/src/algorithms/: GraphColouring.cpp  GraphColouring.h  GraphColouringAsync.cpp  GraphColouringAsync.h  shared.cpp
framework/src/entry_point/: main.cpp
framework/src/framework/: Validator.h
framework/src/framework/algorithms/: GraphColouring.cpp  shared.h
framework/src/framework/utils/: BufferPool.h  CliColours.h  IndexPartitioner.cpp  MPIAsync.cpp
framework/src/framework_tests/: Tests.cpp
framework/src/framework_tests/utils/: IndexPartitionerTest.cpp
framework/src/it/: ExampleItTest.cpp  ItMain.cpp  itMain.cpp
framework/src/it/algorithms/: BfsItTest.cpp  ColouringItTest.cpp
framework/src/it/representations/: ALHPRepresentationItTest.cpp  RepresentationItTest.cpp  RepresentationItTest.h  Rr2dRepresentationItTest.cpp
framework/src/it/validatros/: BfsValidatorItTest.cpp  BspValidatorItTest.cpp  ColouringValidatorItTest.cpp  ExampleItTest.cpp
framework/src/main/: Algorithm.h  Assembly.h  Config.cpp  Config.h  Executor.cpp  Executor.h  GraphBuilder.h  GraphPartition.h  GraphPartitionHandle.h  Prerequisites.h  Runner.h  Validator.h
framework/src/main/algorithms/: Bfs.cpp  Bfs.h  Bsp.cpp  Bsp.h  Colouring.h  GraphColouring.cpp  GraphColouring.h
framework/src/main/algorithms/bfs/: Bfs1CommsRound.h  BfsFixedMessage.h  BfsVarMessage.h
framework/src/main/algorithms/colouring/: GraphColouring.h  GraphColouringAsync.h  GraphColouringMp.h  GraphColouringMpAsync.h
framework/src/main/assemblies/: BfsAssembly.h  ColouringAssembly.h  RepeatingAssembly.h
framework/src/main/representations/: AdjacencyListHashPartition.cpp  AdjacencyListHashPartition.h  ArrayBackedChunkedPartition.cpp  ArrayBackedChunkedPartition.h  RoundRobin2DPartition.h  shared.h
framework/src/main/utils/: AdjacencyListReader.cpp  AdjacencyListReader.h  BufferPool.h  Config.cpp  Config.h  CsvReader.cpp  CsvReader.h  GrouppingMpiAsync.cpp  GrouppingMpiAsync.h  MPIAsync.cpp  MPIAsync.h  MpiTypemap.cpp  MpiTypemap.h  NonCopyable.h  Probe.h  TestUtils.cpp  TestUtils.h  UniqueIdGenerator.cpp  UniqueIdGenerator.h  VariableLengthBufferManager.h
framework/src/main/validators/: BfsValidator.cpp  BfsValidator.h  BspValidator.cpp  BspValidator.h  ColouringValidator.cpp  ColouringValidator.h
framework/src/representations/: AdjacencyListHashPartition.cpp  AdjacencyListHashPartition.h  SimpleStaticGraph.cpp  SimpleStaticGraph.h
framework/src/test/: Main.cpp  TemplatesInstantiation.cpp
framework/src/test/representations/: ArrayBackedChunkedPartitionTest.cpp
framework/src/test/utils/: AdjacencyListReaderTest.cpp  ConfigTest.cpp  CsvReaderTest.cpp  TestUtilsTest.cpp
framework/src/test/validators/: ColouringValidatorTest.cpp
framework/src/utils/: IndexPartitioner.h  MPIAsync.cpp  MPIAsync.h
framework/src/validators/: ColouringValidator.cpp
framework/superc/pth/: adhoc_scheduler.py  build.py  build.sh  common.py  executor.py  run.sh  t0_scheduler.py  t1_scheduler.py  t2_scheduler.py
graphs/: batch_er_gen.sh  er_gen.sh  generate_graph.py  sync_with_superc.sh
graphs/data/: SimpleTestGraph.elt  powerlaw_25_2_05_876.el  powerlaw_25_2_05_876.elt
graphs/er-gen/: CMakeLists.txt  build.py
graphs/er-gen/src/: er_gen.cpp
graphx/: .gitignore  build.sbt  sync_with_superc.sh
graphx/spark_history/: pull_history_data.sh  start_history_server.sh  stop_history_server.sh
graphx/src/main/scala/: Bfs.scala  ClusterRunner.scala  LocalRunner.scala  Main.scala
graphx/src/main/scala/perftest/: Bfs.scala  ClusterRunner.scala  Colouring.scala  Main.scala  Utils.scala
graphx/src/test/scala/perftest/: BfsTest.scala  CliParserTest.scala  ColouringTest.scala  LocalRunner.scala  TestUtils.scala
graphx/superc/pth/: adhoc_scheduler.py  common.py  executor.py  t0_scheduler.py
resultfiles/: .gitignore  pull_data.py
